player can choose multiplayer at game start

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,8 @@
 <h1>Rock, Paper, Scissors Online </h1>
 
-<form action="/game">
+<form>
   Please enter your name:
   <input name="myname" type="text">
-  <input type="submit" value="New Game">
+  <input type="submit" formaction="/game" value="New Game">
+  <input type="submit" formaction="/multi" value="New Multiplayer Game">
 </form>
