trying to figure out how to make sinatra understand that second player that logins is player2

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 
 <form>
   Please enter your name:
-  <input name="myname" type="text">
+  <input name="playername" type="text">
   <input type="submit" formaction="/game" value="New Game">
   <input type="submit" formaction="/multi" value="New Multiplayer Game">
 </form>
